# poker

./: .clang-format  .gitignore  CLAUDE.md  README.md  environment.yaml  tasks.py
config/: solver.yaml
engine/: CMakeLists.txt  action.h  action_abstraction.cpp  action_abstraction.h  card.cpp  card.h  card_abstraction.cpp  card_abstraction.h  deck.cpp  deck.h  equity_calculator.cpp  equity_calculator.h  game_state.cpp  game_state.h  hand_evaluator.cpp  hand_evaluator.h  information_set.cpp  information_set.h  infoset_store.cpp  infoset_store.h  interactive_trainer.cpp  interactive_trainer.h  main.cpp  mccfr.cpp  mccfr.h  pot_manager.cpp  pot_manager.h  range_manager.cpp  range_manager.h  rng.h  subgame_cfr.cpp  subgame_cfr.h  trainer.cpp  trainer.h  utils.cpp  utils.h  win_console.cpp
scripts/: analyze_strategy.py  gen_config_header.py
tests/engine/: test_abstraction.cpp  test_card.cpp  test_game_state.cpp  test_hand_evaluator.cpp  test_mccfr.cpp  test_postflop_bucketing.cpp  test_pot_manager.cpp  test_subgame.cpp
